--- a/curriculum/templates/curriculum/base.html
+++ b/curriculum/templates/curriculum/base.html
@@ -28,6 +28,10 @@
             
             /* CANAL A: Menú Lateral, Títulos Tarjetas y Subtítulos */
             --card-titles-color: #1a1a1a; 
+            
+            --card-bg: #ffffff;
+            --card-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1); /* Equivalente a shadow-lg */
+            --card-border-width: 1px;
         }
 
         body { 
